add links to repos and docs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,10 @@
-<h2 id="title">ember-cli-nf-graph examples:</h2>
+<h2 id="title">ember-cli-nf-graph examples</h2>
+
+<h3>GitHub</h3>
+<p><a href="//github.com/netflix/ember-cli-nf-graph">ember-nf-graph</a></p>
+<p><a href="//github.com/netflix/ember-nf-graph-examples">ember-nf-graph-examples</a></p>
+
+<p><a href="//netflix.github.io/ember-cli-nf-graph/docs/">Documentation for nf-graph here</a></p>
 
 <section>
   <ul>
