--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,11 @@
 <h2 id="title">ember-cli-nf-graph examples</h2>
 
-<h3>GitHub</h3>
-<p><a href="//github.com/netflix/ember-cli-nf-graph">ember-nf-graph</a></p>
-<p><a href="//github.com/netflix/ember-nf-graph-examples">ember-nf-graph-examples</a></p>
-
-<p><a href="//netflix.github.io/ember-cli-nf-graph/docs/">Documentation for nf-graph here</a></p>
-
+<h3>Resources</h3>
+<ul>
+  <li><a href="//github.com/netflix/ember-cli-nf-graph">ember-nf-graph source</a></li>
+  <li><a href="//github.com/netflix/ember-nf-graph-examples">ember-nf-graph-examples source</a></li>
+  <li><a href="//netflix.github.io/ember-cli-nf-graph/docs/">Documentation for nf-graph here</a></li>
+</ul>
 <section>
   <ul>
     <li><a href="#basic-line-graph">Basic Line Graph</a></li>
